kubernetes/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
      - name: php-fpm
        image: ct.hellnet.de/books-php:1.0
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: books
spec:
  selector:
    app: books
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
