kubernetes/ingress-controller.yaml
# Развертывание Ingress Controller
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx-controller
  template:
    metadata:
      labels:
        app: ingress-nginx-controller
    spec:
      containers:
      - name: ingress-nginx-controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.0.4
        args:
          - /nginx-ingress-controller
          - --election-id=ingress-controller-leader
          - --ingress-class=nginx
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
---
# Service для доступа к Ingress Controller
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: ingress-nginx-controller
