kubernetes/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw-users
  template:
    metadata:
      labels:
        app: hw-users
    spec:
      containers:
      - name: php-fpm
        image: ct.hellnet.de/users-php:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: hw-users
spec:
  selector:
    app: hw-users
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
