kubernetes/users-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-nginx
  template:
    metadata:
      labels:
        app: users-nginx
    spec:
      containers:
      - name: nginx
        image: ct.hellnet.de/users-nginx:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: users-nginx
spec:
  selector:
    app: users-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
