kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefixes@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-nginx
                port:
                  number: 80
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books-nginx
                port:
                  number: 80
